2008-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/dirac/__init__.py:
	* flumotion/component/encoders/dirac/dirac-wizard.glade:
	* flumotion/component/encoders/dirac/dirac.py:
	* flumotion/component/encoders/dirac/dirac_wizard.py:
	* flumotion/component/muxers/muxers.xml:
	  Add a Dirac encoder component.  Fixes #921.

2008-04-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* conf/Makefile.am:
	* misc/validate-config.py:
	  Add a script to validate config files.
	  Run it as part of make check on some sample config files.

2008-04-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  In the refactoring, the code that handles errors from do_check
	  and stops going to setup got lost.  Put it back so that a
	  component doesn't actually go to setup if its do_check does not
	  want it to.

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/wizard/overlaystep.py:
	Do not add a overlay component if we're missing elements/python modules.
	Fixes #914

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	Rubber-stamped by Arek

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	* flumotion/component/producers/bttv/bttv_wizard.py:
	* flumotion/component/producers/soundcard/soundcard_wizard.py:
	* flumotion/component/producers/webcam/webcam_wizard.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	Introduce waitForTask/taskFinished methods on the configuration wizard
	which blocks the interface and prevents you from clicking next.
	This replaces the old block_next(True/False) calls which were
	dangerous since they weren't stacked.
	Fixes #917

2008-04-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-nagios.in:
	  Don't use GStreamer.  as a side effect, makes -h/--help work.
